--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+
+# PostgreSQL datasource
+spring.datasource.url=jdbc:postgresql://localhost:5432/lab4
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.metamodel.model=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
